test/inference/good/coreml_letrec.mlt
let rec f = fun x -> g x
and g = fun x -> f 42