test/inference/bad/coreml_value_restriction.mlt
let id = fun x -> x
let e = id id
